--- a/server-nestjs/.env
+++ b/server-nestjs/.env
@@ -1,2 +1,4 @@
-DATABASE_CONNECTION_STRING=mongodb+srv://<username>:<password>@<hostname>/<dbname>
+DATABASE_CONNECTION_STRING=mongodb+srv://Rayan:Project-DB@cluster0.enmzwny.mongodb.net/?retryWrites=true&w=majority
+DATABASE_NAME=Database
+DATABASE_COLLECTION=gameSheets
 PORT=3000
