--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "14.1.1",
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
+    "@nestjs/common": "^9.3.2",
+    "ci": "^2.2.0",
     "rxjs": "7.5.6",
     "socket.io-client": "4.5.1",
     "tslib": "2.4.0",
@@ -39,7 +41,7 @@
     "@angular/cli": "14.1.1",
     "@angular/compiler-cli": "14.1.1",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "18.6.3",
+    "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
