--- a/server-nestjs/package.json
+++ b/server-nestjs/package.json
@@ -32,6 +32,7 @@
         "jimp": "^0.16.2",
         "module-alias": "^2.2.2",
         "mongoose": "^6.9.0",
+        "multer": "^1.4.5-lts.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
@@ -43,6 +44,7 @@
         "@nestjs/testing": "^9.3.1",
         "@types/express": "^4.17.13",
         "@types/jest": "28.1.4",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.0.0",
         "@types/sinon": "^10.0.13",
         "@types/supertest": "^2.0.11",
