--- a/server-nestjs/package.json
+++ b/server-nestjs/package.json
@@ -59,8 +59,10 @@
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-unicorn": "^43.0.2",
+        "i": "^0.3.7",
         "jest": "28.1.2",
         "mongodb-memory-server": "^8.9.0",
+        "npm": "^9.4.1",
         "prettier": "^2.3.2",
         "sinon": "^14.0.0",
         "source-map-support": "^0.5.20",
