--- a/server-nestjs/package.json
+++ b/server-nestjs/package.json
@@ -31,6 +31,7 @@
         "class-validator": "^0.13.2",
         "module-alias": "^2.2.2",
         "mongoose": "^6.5.2",
+        "multer": "^1.4.5-lts.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0"
