--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "14.1.1",
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
+    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "7.5.6",
     "socket.io-client": "4.5.1",
     "tslib": "2.4.0",
