--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,9 @@
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "14.1.1",
     "@angular/compiler-cli": "14.1.1",
+    "@types/events": "^3.0.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "18.6.3",
+    "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
