--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
         "module-alias": "^2.2.2",
         "mongoose": "^6.5.2",
         "multer": "^1.4.5-lts.1",
+        "randomstring": "^1.2.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0"
