--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
     "@ionic/storage-angular": "^3.0.6",
+    "bmp-js": "^0.1.0",
     "rxjs": "7.5.6",
     "socket.io-client": "4.5.1",
     "tslib": "2.4.0",
@@ -39,6 +40,7 @@
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "14.1.1",
     "@angular/compiler-cli": "14.1.1",
+    "@types/bmp-js": "^0.1.0",
     "@types/events": "^3.0.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^18.6.3",
