--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,12 +2,12 @@
     "recommendations": [
         "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
-        "Angular.ng-template",
-        "johnpapa.Angular2",
-        "PKief.material-icon-theme",
+        "angular.ng-template",
+        "johnpapa.angular2",
+        "pkief.material-icon-theme",
         "ecmel.vscode-html-css",
         "abusaidm.html-snippets",
-        "Gruntfuggly.todo-tree",
+        "gruntfuggly.todo-tree",
         "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-french"
     ]
