--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,7 +21,7 @@
         "paths": {
             "@common/*": ["../common/*"],
             "@app/*": ["./app/*"],
-            "@nestjs/common": ["node_modules/@nestjs/common"]
+            "@nestjs/common": ["./node_modules/@nestjs/common"]
         }
     }
 }
