--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
         "@nestjs/config": "^2.3.1",
         "randomstring": "^1.2.3",
         "winston": "^3.8.2"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.0"
     }
 }
