--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "types": ["@nestjs/common", "multer"],
+        "types": ["@nestjs/common", "multer", "jest"],
         "module": "commonjs",
         "declaration": true,
         "removeComments": true,
