--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
         "@angular/router": "14.1.1",
         "@ionic/storage-angular": "^3.0.6",
         "bmp-js": "^0.1.0",
-        "rxjs": "7.5.6",
+        "rxjs": "^7.5.6",
         "socket.io-client": "4.5.1",
         "tslib": "2.4.0",
         "zone.js": "0.11.7"
@@ -43,6 +43,7 @@
         "@types/bmp-js": "^0.1.0",
         "@types/events": "^3.0.0",
         "@types/jasmine": "~3.8.0",
+        "@types/mocha": "^10.0.1",
         "@types/node": "^18.6.3",
         "@typescript-eslint/eslint-plugin": "5.32.0",
         "@typescript-eslint/parser": "5.32.0",
