--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
         "@nestjs/websockets": "^9.0.9",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "jest-create-mock-instance": "^2.0.0",
         "jimp": "^0.22.7",
         "module-alias": "^2.2.2",
         "mongoose": "^6.5.2",
@@ -36,7 +37,9 @@
         "randomstring": "^1.2.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^7.2.0"
+        "rxjs": "^7.2.0",
+        "socket.io-client": "^4.6.1",
+        "socket.io-mock": "^1.3.2"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
@@ -90,7 +93,8 @@
         "collectCoverageFrom": [
             "app/**/*.(t|j)s",
             "!app/app.module.ts",
-            "!app/index.ts"
+            "!app/index.ts",
+            "!app/model/**/*"
         ],
         "coverageDirectory": "./coverage",
         "testEnvironment": "node",
