--- a/server/package.json
+++ b/server/package.json
@@ -64,6 +64,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-unicorn": "^43.0.2",
         "jest": "28.1.2",
+        "mongodb": "^5.1.0",
         "mongodb-memory-server": "^8.9.0",
         "prettier": "^2.3.2",
         "sinon": "^14.0.0",
@@ -94,8 +95,7 @@
             "app/**/*.(t|j)s",
             "!app/app.module.ts",
             "!app/index.ts",
-            "!app/model/**/*",
-            "!app/services/game-logic/*"
+            "!app/model/**/*"
         ],
         "coverageDirectory": "./coverage",
         "testEnvironment": "node",
