--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,6 +221,8 @@ deploy:server:
 
                 # Checkout to the targeted commit
                 git fetch --all
+                git reset --hard
+                git clean -fd
                 git checkout ${CI_COMMIT_SHA}
 
                 # Build the project
