--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,8 @@
             "request": "launch",
             "type": "pwa-chrome",
             "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}/client"
+            "webRoot": "${workspaceFolder}/client",
+            "sourceMaps": true
         }
     ]
 }
